--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sass": "--watch src/app/ui"
+    "sass": "sass --watch src/app"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
