--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "sass": "sass --watch src/app"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.77.1"
-  },
+    "react-dom": "^18"
+    },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
